# safety-incident-predictor

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
src/: incident_predictor.py  privacy_framework.py
