[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "safety-incident-predictor"
version = "0.1.0"
description = "Predict workplace safety incidents before they occur using multi-modal ML"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}

dependencies = [
    "scikit-learn>=1.3.0",
    "xgboost>=2.0.0",
    "torch>=2.1.0",
    "shap>=0.42.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "opacus>=1.4.0",
    "pydantic>=2.5.0",
    "fastapi>=0.104.1",
    "uvicorn>=0.24.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "black>=23.11.0",
    "mypy>=1.7.0"
]
